test/bad/nullables/nullable05.px

a = {null: true}
f: Float? = 0.5
b = {f: true}
a = b
